--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
 <body>
 
     <div class="contenedor">
-        <p>¿QUIERES SER MI SAN VALENTIN?</p>
+        <p>¿ya se mi novia, porfís?</p>
+        <br> 
+        <p> no sirvo para estas cosas, perdón solo di que si</p>
         <button id="yesBtn">Si quiero</button>
         <button id="noBtn">No quiero</button>
     </div>
